--- a/css/style.css
+++ b/css/style.css
@@ -3,66 +3,17 @@
 
 @media only screen and (max-width: 600px)
 {
+    #grillacuerpo {
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: 20% 20% 20% 20%;
+    }
+    .containerCuerpoTitulo{
 
-        /* animación */
-        @keyframes movimgprin {
-            0% {transform: translate(100%);}
-            100% {transform: translate(0%);}
-        }
-        @keyframes movdiv {
-            from {
-                position: relative;
-                left: -200%;
-            }
-            to{
-                position: relative;
-                left: 2%;
-            }
-        }
-        @keyframes movimg {
-            0% {height: 0px;}
-            100% {height: 250px;}
-        }
-    
+        margin-top: 5%; 
+        margin-bottom: 5%; 
 
-
-        .carrusel{
-            position: relative;
-            top: 5%;
-            left: 2%;            
-        }
-        /* imagen de fondo */
-
-        .imgpri{
-            width: 100%;
-    
-            height: auto;
-            grid-column-start: 2;
-            grid-column-end: 3;
-            grid-row-start: 1;
-            grid-row-end: 2;
-            background-image: url("../img/reficar.jpg");
-            background-position: center;
-            background-position: top;
-            background-repeat: no-repeat;
-            animation-name: movimgprin;
-            animation-duration: 4s;
-        }
-        .imgpri > div{
-            position: relative;
-            top: 5%;
-            left: 2%;
-            width: 200px;
-            height: auto;
-            overflow: hidden;
-            border-style: solid;
-            border-color: royalblue;
-            border-width: 2px;
-            animation-name: movdiv;
-            animation-duration: 4s;
-            background-color: royalblue;
-        }
-    
+    }
 }
 
 
