--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -13,6 +13,7 @@ body {
 p {
   line-height: 1.5;
   margin: 30px 0;
+  text-align: justify;
 }
 
 p a {
@@ -171,7 +172,7 @@ img::-moz-selection {
 header.masthead {
   margin-bottom: 50px;
   background: no-repeat center center;
-  background-color: #868e96;
+  background-color: rgba(90, 120, 211, 1);
   background-attachment: scroll;
   position: relative;
   background-size: cover;
