--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ p{
 .letrasInicio{
     background-color: rgba(42, 73, 163, 0.6);
     text-align: center;
+
 }
 
 #content {
@@ -29,6 +30,7 @@ p{
 	box-shadow: 2px 2px 3px #999;
   z-index:100;
 }
+
 .float:hover {
 	text-decoration: none;
 	color: #25d366;
@@ -257,7 +259,7 @@ p{
   }
 
 
-@media only screen and (max-width: 600px)
+@media screen and (max-width: 765px)
 {
     #grillacuerpo {
         display: grid;
@@ -270,15 +272,23 @@ p{
         margin-bottom: 5%; 
 
     }
+    #inicioLogo{
+        height: 4em;
+        width: auto;
+    }
 }
 
 /* pagina destacados */
-@media (min-width: 768px) {
-
+@media (min-width: 765px) 
+{
     header.masthead h1 {
       font-size: 3rem;
     }
-  }
+    #inicioLogo{
+        height: 5em;
+        width: auto;
+    }
+}
 
 .showcase .showcase-text {
   padding: 3rem;
